yelp_games/public/css/styles.css
body {
    padding: 0 auto;
    margin: 0;
    font-size: 3rem;
}

a {
    text-decoration: none;
}

/* --------------------------------- NAVBAR --------------------------------- */
.dropdown-menu {
    font-size: 3rem;
}
a.navbar-brand {
    width: 7rem;
    height: 7rem;
    padding: 0;
    margin: 0;
}
.navbar-toggler {
    height: 10rem;
    width: 10rem;
}
span.navbar-toggler-icon {
    font-size: 2.9rem;
}
.header-search {
    font-size: 2.5rem;
}
i.fa-search {
    font-size: 3rem;
}
/* --------------------------------- FOOTER --------------------------------- */
footer {
    display: fixed bottom;
    position: absolute auto;
}
/* -------------------------------- CARD -------------------------------- */

.card {
    width: 100vw;
    overflow: hidden;
}
.card-img {
    width: 100%;
    height: 20rem;
    margin: 0 auto;
    object-fit: cover;
}
.card-img:hover {
    transition: all 0.5s;
    transform: scale(1.04);
}
.card-title {
    text-align: center;
    font-family: "Red Rose", cursive;
    font-weight: 400;
    font-size: 2.6rem;
}
.card-title:hover {
    transition: all 0.5s;
    color: #0a58ca;
}

.card-text {
    font-family: "Roboto", sans-serif;
    line-height: 1.4;
}

.card-text,
.card-title {
    color: #000;
}

/* OTHERS */
/* .show_comment-container{
    font-size:2rem;
}
.show_comment-container button.btn, .show_comment-container a.btn{
    font-size:2rem;
} */
input.form-control {
    font-size: 4rem;
}
a.btn {
    font-size: 3rem;
}
button.btn {
    font-size: 3rem;
}
textarea.form-control {
    font-size: 3rem;
}

/* -------------------------------------------------------------------------- */
/*                                  SHOW PAGE                                 */
/* -------------------------------------------------------------------------- */
.show_image-container img {
    height: 20rem;
    width: 40rem;
}

/* -------------------------------------------------------------------------- */
/*                             SECTION LADING PAGE                             */
/* -------------------------------------------------------------------------- */

/* ----------------------- ANCHOR EDIT/DELETE BUTTONS ----------------------- */
.modify-comment i {
    font-size: 1.8rem;
}
/* -------------------------------- ANCHOR CAROUSEL -------------------------------- */
.carousel-caption p,
.carousel-caption h5 {
    -webkit-text-stroke-width: 1px;
    -webkit-text-stroke-color: #00000070;
}
.carousel-caption p {
    font-size: 3rem;
}
.carousel-caption h5 {
    font-size: 4.4rem;
}
span.changeSlide {
    font-size: 5rem;
    -webkit-text-stroke-width: 1px;
    -webkit-text-stroke-color: #00000070;
}
/* -------------------------------- !SECTION -------------------------------- */

/* -------------------------------------------------------------------------- */
/*                               SECTION QUERIES                              */
/* -------------------------------------------------------------------------- */
/* Small devices (landscape phones, 576px and up) */
@media (min-width: 576px) and (max-width: 767.98px) {
    a.navbar-brand {
        width: 4rem;
        height: 4rem;
    }
    .navbar-toggler {
        height: 7rem;
        width: 7rem;
    }
    span.navbar-toggler-icon {
        font-size: 2rem;
    }
    .header-search {
        font-size: 2rem;
    }
    i.fa-search {
        font-size: 2rem;
    }

    /* ------------------------- ANCHOR COMMENTS CONTAINER ------------------------- */
    a.add-comment {
        font-size: 1.5rem;
    }
    .show_comment-container .border-end {
        border: none !important;
    }
    .show_comment-container {
        font-size: 1.5rem;
    }
    .show_comment-container .flex-wrap {
        flex-wrap: nowrap !important;
    }
    .show_comment-container .modify-comment {
        height: 3rem;
        line-height: 1.5rem;
    }
    .show_comment-container .comment-text {
        text-align: center;
    }

    /* --------------------------- ANCHOR ADD A COMMENT PAGE --------------------------- */

}

/* Large devices (desktops, 992px and up) */
@media (min-width: 992px) {
    .card {
        width: 18rem;
    }
    body {
        font-size: 1em;
    }
    .card-title {
        font-size: 1.6em;
    }

    a.navbar-brand {
        width: 2rem;
        height: 2rem;
    }

    .header-search {
        font-size: 1.2rem;
    }
    i.fa-search {
        font-size: 1.1rem;
    }

    .dropdown-menu,input.form-control,button.btn,a.btn,textarea.form-control {
        font-size: 1rem;
    }

    /* -------------------------- ANCHOR LADING PAGE CAROUSEL -------------------------- */
    .carousel-caption p {
        font-size: 1.7rem;
    }
    .carousel-caption h5 {
        font-size: 2rem;
    }
    span.changeSlide {
        font-size: 3rem;
    }
}
/* -------------------------------- !SECTION -------------------------------- */

